--- a/examples/color_magnitude_gaia.ipynb
+++ b/examples/color_magnitude_gaia.ipynb
@@ -17,9 +17,7 @@
     "- Studying stellar populations in the Galaxy\n",
     "- Testing stellar evolution models\n",
     "- Identifying unusual stars (white dwarfs, subdwarfs, etc.)\n",
-    "- Measuring distances to star clusters\n",
-    "\n",
-    "**Expected runtime:** ~5 minutes"
+    "- Measuring distances to star clusters"
    ]
   },
   {
@@ -914,57 +912,6 @@
     "# Save catalog\n",
     "stars_df.to_csv('gaia_cmd_catalog.csv', index=False)\n",
     "print(\"✅ Saved catalog to gaia_cmd_catalog.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 12. Project Ideas and Extensions\n",
-    "\n",
-    "Ideas to extend this analysis for your research project:\n",
-    "\n",
-    "### 1. Stellar Cluster Analysis\n",
-    "- Select stars in specific sky regions (e.g., Pleiades, Hyades)\n",
-    "- Measure cluster distance from main sequence fitting\n",
-    "- Determine cluster age from turnoff point\n",
-    "- Study cluster membership using proper motions\n",
-    "\n",
-    "### 2. Galactic Structure\n",
-    "- Map stellar populations as function of Galactic coordinates\n",
-    "- Study vertical disk structure\n",
-    "- Identify thick disk and halo populations\n",
-    "- Trace spiral arm structure using young stars\n",
-    "\n",
-    "### 3. Stellar Evolution\n",
-    "- Compare observed CMD with theoretical isochrones\n",
-    "- Measure initial mass function from main sequence\n",
-    "- Study white dwarf cooling sequence\n",
-    "- Identify post-AGB and planetary nebula central stars\n",
-    "\n",
-    "### 4. Binary Stars\n",
-    "- Look for overluminous systems (unresolved binaries)\n",
-    "- Study binary fraction vs. stellar type\n",
-    "- Identify wide binaries using proper motions\n",
-    "- Analyze color differences in common proper motion pairs\n",
-    "\n",
-    "### 5. Variable Stars\n",
-    "- Cross-match with variability catalogs\n",
-    "- Study pulsating stars on instability strip\n",
-    "- Identify eclipsing binaries from photometry\n",
-    "- Analyze rotational variables\n",
-    "\n",
-    "### 6. Rare Objects\n",
-    "- Identify subdwarfs (metal-poor stars below MS)\n",
-    "- Find white dwarf candidates for follow-up\n",
-    "- Search for hot subdwarf stars\n",
-    "- Identify brown dwarf candidates\n",
-    "\n",
-    "### 7. Selection Function Analysis\n",
-    "- Correct for Gaia's magnitude and color-dependent selection\n",
-    "- Account for extinction effects\n",
-    "- Model completeness as function of distance\n",
-    "- Compare to simulated stellar populations"
    ]
   },
   {
