--- a/examples/stellar_variability_tess.ipynb
+++ b/examples/stellar_variability_tess.ipynb
@@ -16,9 +16,7 @@
     "- Discovering new variable stars\n",
     "- Calibrating period-luminosity relations\n",
     "- Studying stellar pulsation physics\n",
-    "- Finding exoplanet transits\n",
-    "\n",
-    "**Expected runtime:** ~10 minutes"
+    "- Finding exoplanet transits"
    ]
   },
   {
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-07T09:23:03.869964Z",
@@ -56,9 +54,6 @@
     "import pandas as pd\n",
     "from datasets import load_dataset\n",
     "from astropy.timeseries import LombScargle\n",
-    "from astropy.coordinates import SkyCoord\n",
-    "import astropy.units as u\n",
-    "from scipy.signal import find_peaks\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -245,7 +240,7 @@
    "source": [
     "## 4. Period Finding with Lomb-Scargle\n",
     "\n",
-    "The Lomb-Scargle periodogram is the standard method for finding periods in unevenly sampled time series data."
+    "The Lomb-Scargle periodogram is a common method for finding periods in unevenly sampled time series data in astronomy."
    ]
   },
   {
@@ -319,8 +314,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now run our \"period finding\" function over the data. Note that this is definitely *not* what you would do to identify specific types of variable stars in general: stars have tons of variability, and so you'll see tons of signals in the Lomb-Scargle periodagram corresponding to all sorts of activity at a wide variety of length scales. (We'll show a plot later.)\n",
+    "\n",
+    "However, it's at least a good place to start as an illustrative example!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-07T09:23:26.871797Z",
@@ -484,7 +488,7 @@
    "source": [
     "## 5. Variable Star Classification\n",
     "\n",
-    "We'll classify variables based on their period and amplitude. This is a simplified classification scheme - real classification uses more features like light curve shape, color, etc."
+    "We'll classify variables based on their period and amplitude. This is very much a simplified classification scheme - real classification uses more features like light curve shape, color, etc. Things also don't clearly divide up into concrete buckets."
    ]
   },
   {
@@ -677,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-07T09:23:27.577280Z",
@@ -819,45 +823,6 @@
     "print(f\"- Period range: {results_df['period'].min():.3f} - {results_df['period'].max():.3f} days\")\n",
     "print(f\"- Amplitude range: {results_df['amplitude'].min():.4f} - {results_df['amplitude'].max():.4f}\")\n",
     "print(f\"- Best candidate: {best_var['object_id']} ({best_var['var_type']})\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Project Ideas and Extensions\n",
-    "\n",
-    "Ideas to extend this analysis for your research project:\n",
-    "\n",
-    "### 1. Cross-match with Gaia\n",
-    "- Get parallaxes to compute absolute magnitudes\n",
-    "- Create period-luminosity diagrams\n",
-    "- Calibrate distance indicators\n",
-    "\n",
-    "### 2. Machine Learning Classification\n",
-    "- Extract more light curve features (skewness, harmonics)\n",
-    "- Train Random Forest or neural network classifier\n",
-    "- Identify rare variable types\n",
-    "\n",
-    "### 3. Search for Exoplanets\n",
-    "- Look for periodic dips (transits)\n",
-    "- Check for secondary eclipses\n",
-    "- Measure transit depths and durations\n",
-    "\n",
-    "### 4. Time Series Analysis\n",
-    "- Wavelet analysis for non-periodic variables\n",
-    "- Search for frequency changes over time\n",
-    "- Multi-frequency analysis for complex pulsators\n",
-    "\n",
-    "### 5. Population Studies\n",
-    "- Map variable star distribution in the Galaxy\n",
-    "- Study period distributions by stellar type\n",
-    "- Compare with stellar evolution models\n",
-    "\n",
-    "### 6. Follow-up Observations\n",
-    "- Identify targets for spectroscopic follow-up\n",
-    "- Plan ground-based photometry campaigns\n",
-    "- Cross-match with other time-domain surveys"
    ]
   }
  ],
