--- a/examples/xray_sources_chandra.ipynb
+++ b/examples/xray_sources_chandra.ipynb
@@ -14,9 +14,7 @@
     "3. Cross-match X-ray and optical sources\n",
     "4. Use parallaxes to compute X-ray luminosities\n",
     "5. Analyze X-ray spectra and hardness ratios\n",
-    "6. Classify stellar vs extragalactic X-ray sources\n",
-    "\n",
-    "**Expected runtime**: ~1-2 minutes"
+    "6. Classify stellar vs extragalactic X-ray sources"
    ]
   },
   {
@@ -81,7 +79,7 @@
     "**X-rays (Chandra 0.1-10 keV)**:\n",
     "- Trace hot gas, accretion, high-energy processes\n",
     "- Detect: AGN, X-ray binaries, coronally active stars, hot gas\n",
-    "- Challenge: Distinguishing stellar from extragalactic sources\n",
+    "- Example challenge: Distinguishing stellar from extragalactic sources\n",
     "\n",
     "**Gaia DR3 Optical Astrometry**:\n",
     "- Precise parallaxes → distances to nearby stars\n",
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e44153d0",
    "metadata": {
     "execution": {
@@ -186,18 +184,37 @@
    ],
    "source": [
     "# Download Chandra data\n",
-    "print(\"[1/2] Downloading Chandra X-ray data...\")\n",
-    "chandra_url = f\"https://users.flatironinstitute.org/~polymathic/data/MultimodalUniverse/v1/chandra/spectra/healpix={healpix}/\"\n",
-    "subprocess.run([\n",
-    "    \"wget\", \"-r\", \"-np\", \"-nH\", \"--cut-dirs=1\",\n",
-    "    \"-R\", \"index.html*\", \"-q\", chandra_url\n",
-    "], check=True)\n",
+    "print(\"Downloading Chandra X-ray data...\")\n",
+    "\n",
+    "try:\n",
+    "    subprocess.run([\n",
+    "        \"wget\", \"-r\", \"-np\", \"-nH\", \"--cut-dirs=1\",\n",
+    "        \"-R\", \"index.html*\", \"-q\",\n",
+    "        f\"https://users.flatironinstitute.org/~polymathic/data/MultimodalUniverse/v1/chandra/spectra/healpix={healpix}/\"\n",
+    "    ], check=True)\n",
+    "except:\n",
+    "    # Use requests to download the file (single file example)\n",
+    "    \n",
+    "    chandra_url = f\"https://users.flatironinstitute.org/~polymathic/data/MultimodalUniverse/v1/chandra/spectra/healpix={healpix}/001-of-001.hdf5\"\n",
+    "    chandra_local_path = f\"data/MultimodalUniverse/v1/chandra/spectra/healpix={healpix}/001-of-001.hdf5\"\n",
+    "    \n",
+    "    # Make sure the directory exists\n",
+    "    Path(f\"data/MultimodalUniverse/v1/chandra/spectra/healpix={healpix}\").mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    response = requests.get(chandra_url, stream=True)\n",
+    "    if response.status_code == 200:\n",
+    "        with open(chandra_local_path, 'wb') as f:\n",
+    "            for chunk in response.iter_content(chunk_size=8192):\n",
+    "                f.write(chunk)\n",
+    "    else:\n",
+    "        print(f\"  ❌ Failed to download Chandra data (status code: {response.status_code})\")\n",
+    "        \n",
     "print(\"  ✅ Chandra data downloaded\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2090d38a",
    "metadata": {
     "execution": {
@@ -227,15 +244,33 @@
    ],
    "source": [
     "# Download Gaia data\n",
-    "print(\"[2/2] Downloading Gaia optical astrometry data...\")\n",
-    "gaia_url = f\"https://users.flatironinstitute.org/~polymathic/data/MultimodalUniverse/v1/gaia/gaia/healpix={healpix}/\"\n",
-    "subprocess.run([\n",
-    "    \"wget\", \"-r\", \"-np\", \"-nH\", \"--cut-dirs=1\",\n",
-    "    \"-R\", \"index.html*\", \"-q\", gaia_url\n",
-    "], check=True)\n",
-    "print(\"  ✅ Gaia data downloaded\")\n",
+    "print(\"Downloading Gaia data...\")\n",
     "\n",
-    "print(\"\\n✅ All data downloaded successfully\")"
+    "try:\n",
+    "    subprocess.run([\n",
+    "        \"wget\", \"-r\", \"-np\", \"-nH\", \"--cut-dirs=1\",\n",
+    "        \"-R\", \"index.html*\", \"-q\",\n",
+    "        f\"https://users.flatironinstitute.org/~polymathic/data/MultimodalUniverse/v1/gaia/gaia/healpix={healpix}/\"\n",
+    "    ], check=True)\n",
+    "    print(\"  ✅ Gaia data downloaded\")\n",
+    "except:\n",
+    "    # Use requests to download the file (single file example)\n",
+    "    import requests\n",
+    "\n",
+    "    gaia_url = f\"https://users.flatironinstitute.org/~polymathic/data/MultimodalUniverse/v1/gaia/gaia/healpix={healpix}/001-of-001.hdf5\"\n",
+    "    gaia_local_path = f\"data/MultimodalUniverse/v1/gaia/gaia/healpix={healpix}/001-of-001.hdf5\"\n",
+    "\n",
+    "    # Make sure the directory exists\n",
+    "    Path(f\"data/MultimodalUniverse/v1/gaia/gaia/healpix={healpix}\").mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    response = requests.get(gaia_url, stream=True)\n",
+    "    if response.status_code == 200:\n",
+    "        with open(gaia_local_path, 'wb') as f:\n",
+    "            for chunk in response.iter_content(chunk_size=8192):\n",
+    "                f.write(chunk)\n",
+    "        print(\"  ✅ Gaia data downloaded\")\n",
+    "    else:\n",
+    "        print(f\"  ❌ Failed to download Gaia data (status code: {response.status_code})\")"
    ]
   },
   {
@@ -940,49 +975,6 @@
     "- log(L_X) range: {np.nanmin(stellar_df['log_lx']):.1f} - {np.nanmax(stellar_df['log_lx']):.1f}\n",
     "- Median BP-RP: {np.nanmedian(stellar_df['bp_rp']):.2f} mag\n",
     "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4450757",
-   "metadata": {},
-   "source": [
-    "### Research Extensions\n",
-    "\n",
-    "**1. Stellar X-ray Activity**:\n",
-    "   - L_X vs spectral type (BP-RP color)\n",
-    "   - Rotation-activity relations (use proper motions)\n",
-    "   - X-ray luminosity functions for different stellar populations\n",
-    "   - Identify X-ray binary candidates (high L_X)\n",
-    "\n",
-    "**2. X-ray Binary Studies**:\n",
-    "   - High-luminosity stellar X-ray sources (L_X > 10^31 erg/s)\n",
-    "   - Companion star properties from Gaia photometry\n",
-    "   - Binary orbital motion from astrometry\n",
-    "   - Hard X-rays + optical colors\n",
-    "\n",
-    "**3. AGN Identification**:\n",
-    "   - Sources with no parallax detection\n",
-    "   - Hard X-ray spectra (high hardness ratios)\n",
-    "   - Cross-match with SDSS/DESI for redshifts\n",
-    "   - X-ray luminosity > 10^41 erg/s\n",
-    "\n",
-    "**4. Distance-Based Studies**:\n",
-    "   - X-ray luminosity functions (separately for stellar/AGN)\n",
-    "   - Spatial distribution of X-ray stars\n",
-    "   - Galactic structure traced by X-ray sources\n",
-    "   - 3D maps of X-ray emitting populations\n",
-    "\n",
-    "**5. Time Domain**:\n",
-    "   - Repeat observations for X-ray variability\n",
-    "   - Flare stars and transients\n",
-    "   - Correlate with Gaia photometric variability\n",
-    "   - AGN variability studies\n",
-    "\n",
-    "**Generated Files**:\n",
-    "- `chandra_gaia_multiwavelength.png`: Diagnostic plots\n",
-    "- `chandra_gaia_matched.csv`: Matched catalog with luminosities\n",
-    "- `chandra_gaia_classified.csv`: Classified sources (stellar vs extragalactic)"
    ]
   }
  ],
