--- a/tutorials/01_getting_started.ipynb
+++ b/tutorials/01_getting_started.ipynb
@@ -13,9 +13,9 @@
     "- Make your first visualization\n",
     "- Save data for offline work\n",
     "\n",
-    "**Expected runtime: 5 minutes**\n",
+    "**Note**: All dataset (previews) are at https://huggingface.co/MultimodalUniverse/datasets\n",
     "\n",
-    "**Note**: All datasets are at https://huggingface.co/MultimodalUniverse/datasets"
+    "See the documentation for examples on how to install/load the `mmu` package, which provides some useful utilities"
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-07T09:18:10.716803Z",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-07T09:18:11.847191Z",
@@ -143,6 +143,7 @@
    "source": [
     "# Load PLAsTiCC dataset in streaming mode\n",
     "# Streaming mode means we don't download the whole dataset at once\n",
+    "# See the datasets documentation for more details and examples\n",
     "print(\"Loading PLAsTiCC dataset in streaming mode...\")\n",
     "dataset = load_dataset(\n",
     "    \"MultimodalUniverse/plasticc\",\n",
@@ -160,7 +161,7 @@
    "source": [
     "## 3. Exploring Data Structure\n",
     "\n",
-    "PLAsTiCC contains simulated light curves for the LSST survey. Let's explore the structure:"
+    "As an example, let's start with PLAsTiCC. That dataset contains simulated light curves for the LSST survey. Let's explore the structure:"
    ]
   },
   {
@@ -330,6 +331,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It is clear that the (0, 0) point is likely a placeholder that we want to remove. This type of checking is useful for finding potential artifacts, bugs, etc. when looking through the datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Loading Multiple Examples\n",
     "\n",
     "Let's load several examples and see the variety in the data:"
@@ -337,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-07T09:18:15.728094Z",
@@ -409,7 +417,7 @@
     "    })\n",
     "    print(f\"  Loaded object {i+1}/10: ID={example['object_id']}\")\n",
     "\n",
-    "# Convert to DataFrame for easy viewing\n",
+    "# Convert to DataFrame for easy viewing (with pandas)\n",
     "df = pd.DataFrame(examples)\n",
     "print(\"\\nSummary of loaded objects:\")\n",
     "print(df)\n",
@@ -425,7 +433,7 @@
    "source": [
     "## 6. Loading Without Streaming\n",
     "\n",
-    "For development, you might want to download a subset for faster access:"
+    "For development, you might want to download a subset for faster access rather than just one at a time. This is shown below."
    ]
   },
   {
@@ -500,9 +508,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that other tutorials will show examples of downloading batches of data locally to your hard drive (saving them for later), which is better when you are trying to work with larger quantities of data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Saving Data for Offline Work\n",
     "\n",
-    "You can save subsets for working without internet:"
+    "Once you download a subset from streaming, you can save them for working without internet:"
    ]
   },
   {
@@ -577,18 +592,8 @@
     "### Key Takeaways:\n",
     "1. Use `streaming=True` for exploration without downloading everything\n",
     "2. Use `split=\"train[:N]\"` to download specific number of examples\n",
-    "3. PLAsTiCC uses dictionary structure for light curves\n",
+    "3. PLAsTiCC (and many other datasets) use dictionary structure for light curves\n",
     "4. Data can be saved as CSV (metadata) and pickle (full structure)\n",
-    "\n",
-    "### Available Datasets to Explore:\n",
-    "- `MultimodalUniverse/plasticc` - Time series\n",
-    "- `MultimodalUniverse/gaia` - Catalog (ra, dec lowercase)\n",
-    "- `MultimodalUniverse/tess` - Time series (RA, DEC uppercase)\n",
-    "- `MultimodalUniverse/gz10` - Galaxies (rgb_image, gz10_label)\n",
-    "- `MultimodalUniverse/sdss` - Spectra\n",
-    "- `MultimodalUniverse/chandra` - X-ray\n",
-    "\n",
-    "All datasets: https://huggingface.co/MultimodalUniverse/datasets\n",
     "\n",
     "### Next Tutorial:\n",
     "Continue to `02_data_types.ipynb` to explore images, spectra, and catalogs!"
@@ -597,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
